# concat-io-hmm

./: .gitignore  main.py  pyproject.toml  setup.py
algo/: baum_welch.cpp  io_baum_welch.cpp
components/: data_iterator.py  dependence_tree.py  io_markov_node.py  markov_graph.py  markov_node.py  message.py  pseudo_node.py  tools.py
data/: data_creation.py  data_iterator.py  io_data_creation.py
