[project]
name = "concat-io-hmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awkward>=2.8.10",
    "click>=8.3.1",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.8",
    "memory-profiler>=0.61.0",
    "networkx>=3.5",
    "numba>=0.63.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pybind11>=3.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm[toml]>=6.2",
    "pybind11>=2.6.0",
]

[tool.setuptools]
py-modules = []
